# MediaPark

./: CMakeLists.txt  main.cpp  shared_ptr.cpp  shared_ptr.h  unique_ptr.cpp  unique_ptr.h
Client/: Client.vcxproj  Client.vcxproj.filters  MyClient.cpp  MyClient.h  Source.cpp
Client/Debug/: Client.exe.recipe  vc142.idb
Client/Debug/Client.tlog/: CL.1780.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Client/x64/Debug/: Client.exe.recipe  vc142.idb
Net/: Client.cpp  Client.h  Connection.cpp  Connection.h  Helpers.h  IPEndpoint.cpp  IPEndpoint.h  IPVersion.h  IncludeMe.h  Net.vcxproj  Net.vcxproj.filters  Network.cpp  Network.h  NonCopyable.h  Packet.cpp  Packet.h  PacketException.h  PacketManager.cpp  PacketManager.h  PacketType.h  Serializable.cpp  Serializable.h  Server.cpp  Server.h  Socket.cpp  Socket.h  SocketHandle.h  SocketOption.h  SocketResult.h
Net/Debug/: PNet.idb  PNet.vcxproj.FileListAbsolute.txt
Net/Debug/PNet.tlog/: CL.12980.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  PNet.lastbuildstate
Net/Helpers/: prevector.h
Net/sqlite3/: CMakeLists.txt  Command.cpp  Command.h  Database.cpp  Database.h  DatabaseException.h  Query.h  Statement.cpp  Statement.h  Transaction.cpp  Transaction.h
Net/x64/Debug/: Net.idb  Net.vcxproj.FileListAbsolute.txt
Server/: MyServer.cpp  MyServer.h  Server.vcxproj  Server.vcxproj.filters  Source.cpp
Server/Debug/: Server.exe.recipe  vc142.idb
Server/Debug/Server.tlog/: CL.command.1.tlog  (+5 more)
(+21 files in other folders)
